--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
     jpa:
         hibernate:
-            ddl-auto: create    # 애플리케이션 실행시점에 테이블을 지우고, 재생성.
+            ddl-auto: none
         properties:
             hibernate:
                 # show_sql: true  # 운영환경에서 쓰지 않음
